--- a/src/assets/scss/vuexy/components/verticalNavMenu.scss
+++ b/src/assets/scss/vuexy/components/verticalNavMenu.scss
@@ -57,8 +57,9 @@
   }
 
   .header-sidebar {
-    padding: 20px 19px 16px 23px;
+    padding: 8px 19px 8px 23px;
     width: 100%;
+    background: #383838;
     .logo{
       img {
         padding: 4px 0;
@@ -80,14 +81,15 @@
     pointer-events: none;
     margin-top: -1.3rem;
     filter: blur(5px);
-    background: linear-gradient(rgb(255, 255, 255) 41%, rgba(255, 255, 255, 0.11) 95%, rgba(255, 255, 255, 0) 100%);
+    // background: linear-gradient(rgb(255, 255, 255) 41%, rgba(255, 255, 255, 0.11) 95%, rgba(255, 255, 255, 0) 100%);
   }
 
   .scroll-area-v-nav-menu {
     position: relative;
     margin: auto;
     width: 100%;
-    height: calc(var(--vh, 1vh) * 100 - 69px);
+    height: calc(var(--vh, 1vh) * 100 - 57px);
+    background: #5b5b5b;
 
     &:not(.ps) {
       overflow-y: auto;
@@ -98,7 +100,7 @@
     }
 
     > .vs-sidebar--item{
-      padding: 0 15px;
+      padding: 0 0px;
     }
   }
 
@@ -139,6 +141,9 @@
   .vs-sidebar--item{
     transition: none;
     overflow: visible !important;
+    a{
+      border-radius: 0px !important;
+    }
     &:hover{
       a {
         color: inherit;
@@ -164,9 +169,19 @@
       > * {
         transition: transform 0.25s ease;
       }
-      padding: 10px 15px;
+      padding: 13px 6px;
+      border-left: 4px solid transparent;
+      img {
+        width: 30px;
+        height: 30px;
+      }
       span{
-        font-size: 15px;
+        font-size: 16px;
+        font-weight: 600;
+        &.truncate{
+          color: #fff;
+          padding-left: 10px;
+        }
       }
     }
 
@@ -185,8 +200,11 @@
 
 
     .router-link-active{
-      background: linear-gradient(118deg, rgba(var(--vs-primary),1), rgba(var(--vs-primary),.7));
-      box-shadow: 0px 0px 10px 1px rgba(var(--vs-primary),.7);
+      // background: linear-gradient(118deg, rgba(var(--vs-primary),1), rgba(var(--vs-primary),.7));
+      background: #aeaeae;
+      // box-shadow: 0px 0px 10px 1px rgba(var(--vs-primary),.7);
+      box-shadow: none;
+      border-left: 4px solid #4ec12d;
       // font-weight: 400;
       .feather-icon{
         color: $white;
